Put the session related controllers in auth. Update the api-docs and specs
