# config/routes.rb
@@ -3,18 +3,18 @@ Rails.application.routes.draw do
   mount Rswag::Ui::Engine => '/api-docs'
   mount Rswag::Api::Engine => '/api-docs'
 
-  scope :api, defaults: { format: :json } do
+  scope :api,  defaults: { format: :json } do
     scope :v1 do
-      # --- Auth Routes ---
-      devise_for :users, path: '', path_names: {
-        sign_in: 'login', sign_out: 'logout', registration: 'register'
-      }, controllers: {
-        registrations: "api/v1/users/registrations",
-        sessions: "api/v1/users/sessions"
-      }
-
-      # --- Public/Customer Routes ---
       scope module: 'api/v1' do
+        # --- Auth Routes ---
+        devise_for :users, path: '', path_names: {
+          sign_in: 'auth/login', sign_out: 'auth/logout', registration: 'auth/register'
+          }, controllers: {
+            registrations: "api/v1/auth/registrations",
+            sessions: "api/v1/auth/sessions"
+          }
+          
+        # --- Public/Customer Routes ---
         resources :reservations, only: [:index, :create, :destroy]
         resources :cars, only: [:index, :show]
         get 'profile', to: 'users#profile'
@@ -30,7 +30,8 @@ Rails.application.routes.draw do
           end
         end
       end
-
     end
   end
 end
+
+ 
