# swagger/v1/swagger.yaml
@@ -410,7 +410,7 @@ paths:
           description: Status toggled successfully
         '409':
           description: Conflict - Car is currently reserved
-  "/api/v1/register":
+  "/api/v1/auth/register":
     post:
       summary: User Registration
       tags:
@@ -426,7 +426,7 @@ paths:
           application/json:
             schema:
               "$ref": "#/components/schemas/user_registration_request"
-  "/api/v1/login":
+  "/api/v1/auth/login":
     post:
       summary: Sign in User
       tags:
@@ -442,7 +442,7 @@ paths:
           application/json:
             schema:
               "$ref": "#/components/schemas/user_login_request"
-  "/api/v1/logout":
+  "/api/v1/auth/logout":
     delete:
       summary: Sign out User
       tags:
